VSE: cropping strips puts a transparent line through the image #41241

Closed
opened 2014-07-30 01:17:12 +02:00 by reade · 6 comments

System Information
Win 7 9800GTX+

Blender Version
tested on 2.71 9337574 and 2.65 r53189

Short description of error
Enabling crop on the top or bottom of a strip in the VSE can create a transparent 1-pixel-high line along the bottom edge of the image when the image gets stretched to fit. Extreme cropping will stretch this line wider.
This line shows up in the preview and the final render.
The colors in the image seem to influence the transparency of the line (red apparently less affected than green or blue).

Exact steps for others to reproduce the error
In Video Sequence Editor add a test image or movie and match the render resolution. Enable Image Crop on the strip and increase Top and Bottom values a little. A transparent line should be visible just above the bottom edge.
Here is a prepared test image and file:
test.png vse_crop_test.blend

**System Information** Win 7 9800GTX+ **Blender Version** tested on 2.71 9337574 and 2.65 r53189 **Short description of error** Enabling crop on the top or bottom of a strip in the VSE can create a transparent 1-pixel-high line along the bottom edge of the image when the image gets stretched to fit. Extreme cropping will stretch this line wider. This line shows up in the preview and the final render. The colors in the image seem to influence the transparency of the line (red apparently less affected than green or blue). **Exact steps for others to reproduce the error** In Video Sequence Editor add a test image or movie and match the render resolution. Enable Image Crop on the strip and increase Top and Bottom values a little. A transparent line should be visible just above the bottom edge. Here is a prepared test image and file: ![test.png](https://archive.blender.org/developer/F100229/test.png) [vse_crop_test.blend](https://archive.blender.org/developer/F100230/vse_crop_test.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @jxqz

Added subscriber: @jxqz

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2014-07-30 08:17:09 +02:00

This issue was referenced by fa8d38da74

This issue was referenced by fa8d38da74946d3d08ecb4548db98eb2a855b096

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit fa8d38da74.

Closed by commit fa8d38da74.
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#41241
No description provided.