Fix T41241: VSE: cropping strips puts a transparent line through the image.